tests/ui/issues/issue-26262.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-26262.rs:7:6
   |
LL | impl<T: Tr> S<T::Assoc> {
   |      ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<T: Tr> S<T::Assoc> {
LL + impl<: Tr> S<T::Assoc> {
   |

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-26262.rs:17:6
   |
LL | impl<'a,T: Trait2<'a>> Trait1<<T as Trait2<'a>>::Foo> for T {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a,T: Trait2<'a>> Trait1<<T as Trait2<'a>>::Foo> for T {
LL + impl<,T: Trait2<'a>> Trait1<<T as Trait2<'a>>::Foo> for T {
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
